--- a/src/app.styles.scss
+++ b/src/app.styles.scss
@@ -1,3 +1,5 @@
+@import "./assets/styles/variables.styles.scss";
+
 .root {
   width: 100vw;
   min-height: 100vh;
@@ -7,4 +9,62 @@
 .root-scrollOff {
   height: 100vh;
   overflow: hidden;
+}
+
+// bottom social links
+
+.root__social-networks {
+  position: fixed;
+  bottom: 0;
+  left: 3.5rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.25rem;
+
+  > svg {
+    font-size: 1.3rem;
+    color: $dark;
+    transition: color 0.1s ease-in-out;
+
+    &:hover {
+      cursor: pointer;
+      color: $light-dark;
+    }
+  }
+}
+
+.root__email {
+  position: fixed;
+  bottom: 0;
+  right: 4.15rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  > a {
+    position: absolute;
+
+    font-size: 1rem;
+    font-family: $font-mono;
+
+    transform: rotate(90deg);
+    color: $dark;
+    text-decoration: none;
+
+    bottom: 14rem;
+
+    &:hover {
+      cursor: pointer;
+      color: $light-dark;
+    }
+  }
+}
+
+.social-networks__line {
+  width: 0.1rem;
+  height: 7rem;
+  background-color: $dark;
 }
