--- a/src/assets/styles/variables.styles.scss
+++ b/src/assets/styles/variables.styles.scss
@@ -1,7 +1,11 @@
 // Colors
-
 $dark: #313131;
 $light-dark: #666766;
 
 $box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
   rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+
+// font
+
+$font-text: "Barlow", sans-serif;
+$font-mono: "Noto Sans Mono", monospace;
