--- a/src/components/headerNav/headerNav.styles.scss
+++ b/src/components/headerNav/headerNav.styles.scss
@@ -2,10 +2,13 @@
 
 header {
   height: 5rem;
+  width: 100%;
   box-shadow: $box-shadow;
 
   display: flex;
   justify-content: center;
+  position: fixed;
+  top: 0;
 
   > .header__container {
     width: calc(100% - 4rem);
