--- a/src/app.styles.scss
+++ b/src/app.styles.scss
@@ -27,10 +27,12 @@
     font-size: 1.3rem;
     color: $dark;
     transition: color 0.1s ease-in-out;
+    transition: transform 0.1s ease-in-out;
 
     &:hover {
       cursor: pointer;
       color: $light-dark;
+      transform: translateY(-0.15rem);
     }
   }
 }
@@ -67,4 +69,10 @@
   width: 0.1rem;
   height: 7rem;
   background-color: $dark;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
