--- a/src/assets/styles/variables.styles.scss
+++ b/src/assets/styles/variables.styles.scss
@@ -5,6 +5,9 @@ $light-dark: #666766;
 $box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
   rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 
+$box-shadow-off: rgba(255, 255, 255, 0) 0px 0px 0px 0px,
+  rgba(255, 255, 255, 0) 0px 0px 0px 0px;
+
 // font
 
 $font-text: "Barlow", sans-serif;
