--- a/src/components/headerNav/headerNav.styles.scss
+++ b/src/components/headerNav/headerNav.styles.scss
@@ -23,7 +23,7 @@ header {
       width: 4rem;
     }
 
-    .container__linkContainer {
+    .container__link-container {
       > ul {
         display: flex;
         align-items: center;
@@ -54,6 +54,34 @@ header {
             > a {
               color: $light-dark;
             }
+          }
+        }
+
+        .link-button {
+          font-family: "Barlow", sans-serif;
+          font-weight: 500;
+          font-size: 1rem;
+
+          display: flex;
+          justify-content: center;
+          position: relative;
+
+          padding: 0.5rem 1rem;
+          border: 0.15rem solid $dark;
+          box-shadow: 0rem 0.15rem 0rem 0rem #272727;
+          border-radius: 0.3rem;
+
+          color: $dark;
+          display: inline-block;
+
+          &:hover {
+            cursor: pointer;
+          }
+
+          &:active {
+            cursor: pointer;
+
+            box-shadow: 0rem 0rem 0rem 0rem #272727;
           }
         }
       }
