--- a/src/views/homeView/homeView.styles.scss
+++ b/src/views/homeView/homeView.styles.scss
@@ -1,7 +1,9 @@
 @import "../../assets/styles/variables.styles.scss";
+@import "../../assets/styles/mixins.styles.scss";
 
 .main__page-container {
   width: 70%;
+  max-width: 1000px;
 
   display: flex;
   flex-direction: column;
@@ -9,7 +11,7 @@
 
   .page-container__intro-container {
     width: 100%;
-    height: calc(100vh - 6rem);
+    height: calc(100vh);
 
     display: flex;
     justify-content: center;
@@ -43,12 +45,88 @@
       }
 
       .center-container__personal-description {
-        font-family: $font-text;
-        color: $light-dark;
-        line-height: 1.75rem;
-        font-size: clamp(0.75rem, 3vw, 1.25rem);
-        max-width: 37rem;
-        font-weight: 300;
+        @include large-text;
+      }
+    }
+  }
+
+  .page-container__about-me-container {
+    width: 100%;
+    padding: 6rem 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .about-me-container__center-container {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      gap: 3rem;
+      .center-container__left-container {
+        flex-grow: 1;
+        .left-container__heading {
+          display: flex;
+          align-items: center;
+          margin-bottom: 2rem;
+
+          > h2 {
+            font-family: $font-text;
+            color: $dark;
+            font-size: 2rem;
+
+            > span {
+              font-family: $font-mono;
+              color: $light-dark;
+            }
+          }
+          .heading__divider {
+            height: 0.25rem;
+            background-color: $light-dark;
+            margin: 0 1rem;
+            flex-grow: 1;
+          }
+        }
+        p {
+          @include large-text;
+          max-width: none;
+          a {
+            text-decoration: none;
+            color: $dark;
+            font-weight: 500;
+            transition: transform 0.1s ease-in-out;
+          }
+        }
+      }
+
+      .center-container__right-container {
+        .right-container__image-highlight {
+          min-width: 300px;
+          min-height: 300px;
+          border: 0.25rem solid $light-dark;
+          border-radius: 0.25rem;
+          position: relative;
+          margin-top: 1rem;
+          img {
+            position: absolute;
+            top: 1.5rem;
+            left: 1.5rem;
+            max-width: 300px;
+            object-fit: cover;
+            filter: grayscale(100%);
+            border-radius: 0.25rem;
+            transition: top 0.1s ease-in-out, left 0.1s ease-in-out,
+              filter 0.1s ease-in-out;
+          }
+
+          &:hover {
+            img {
+              filter: grayscale(0%);
+              top: 1rem;
+              left: 1rem;
+            }
+          }
+        }
       }
     }
   }
