--- a/src/views/homeView/homeView.styles.scss
+++ b/src/views/homeView/homeView.styles.scss
@@ -47,6 +47,34 @@
       .center-container__personal-description {
         @include large-text;
       }
+
+      .link-button {
+        font-family: "Barlow", sans-serif;
+        font-weight: 500;
+        font-size: 1.25rem;
+
+        display: flex;
+        justify-content: center;
+        position: relative;
+
+        padding: 0.75rem 1.25rem;
+        border: 0.15rem solid $dark;
+        box-shadow: 0rem 0.225rem 0rem 0rem #272727;
+        border-radius: 0.35rem;
+
+        color: $dark;
+        display: inline-block;
+
+        &:hover {
+          cursor: pointer;
+        }
+
+        &:active {
+          cursor: pointer;
+
+          box-shadow: 0rem 0rem 0rem 0rem #272727;
+        }
+      }
     }
   }
 
@@ -260,6 +288,7 @@
       }
     }
   }
+
   .page-container__projects {
     width: 100%;
     padding-top: 12rem;
@@ -296,7 +325,7 @@
         justify-content: center;
         position: relative;
 
-        margin-bottom: 2rem;
+        margin-bottom: 6rem;
 
         .switch__divider {
           position: absolute;
@@ -348,6 +377,208 @@
           }
         }
       }
+
+      .center-container__projects-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+        .projects-container__most-recent-container {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+
+          .most-recent-container__project {
+            width: 100%;
+            margin-bottom: 8rem;
+
+            display: flex;
+            justify-content: space-between;
+            gap: 4rem;
+
+            .project__image-container {
+              width: 50rem;
+
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+
+              border-radius: 0.25rem;
+
+              img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: 0.25rem;
+                filter: grayscale(100%);
+                transition: filter 0.1s ease-in-out;
+
+                &:hover {
+                  filter: grayscale(0%);
+                }
+              }
+            }
+
+            .project__text-container {
+              .text-container__heading {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 1.5rem;
+
+                h3 {
+                  font-family: $font-text;
+                  color: $dark;
+                  font-size: 1.75rem;
+                  font-weight: 400;
+                }
+
+                > div {
+                  display: flex;
+                  justify-content: space-around;
+                  align-items: center;
+                  gap: 1rem;
+                  > a {
+                    text-decoration: none;
+                    svg {
+                      font-size: 1.5rem;
+                      color: $light-dark;
+                      transition: color 0.1s ease-in-out;
+                    }
+
+                    &:hover {
+                      cursor: pointer;
+                      svg {
+                        color: $dark;
+                      }
+                    }
+                  }
+                }
+              }
+              .text-container__description {
+                margin-bottom: 1.5rem;
+
+                @include large-text;
+                max-width: none;
+              }
+              .text-container__footer {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin-top: 2rem;
+
+                .footer__technologies {
+                  display: flex;
+                  gap: 1rem;
+                  align-items: center;
+                  transition: color 0.1s ease-in-out;
+
+                  a {
+                    display: inline-block;
+                    text-decoration: none;
+                    font-family: $font-mono;
+                    color: $light-dark;
+                    font-size: 1rem;
+                    font-weight: 400;
+
+                    &:hover {
+                      cursor: pointer;
+                      color: $dark;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+        .projects-container__project-archive-container {
+          width: 100%;
+
+          display: grid;
+          justify-content: center;
+          grid-template-columns: repeat(auto-fit, minmax(275px, 275px));
+          gap: 3rem;
+
+          .project-archive-container__archive-project {
+            height: 275px;
+            border: $dark 0.25rem solid;
+            border-radius: 0.25rem;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            box-sizing: border-box;
+            padding: 1.25rem;
+
+            .archive-project__links-container {
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              margin-bottom: 1rem;
+
+              > svg {
+                font-size: 3rem;
+                color: $dark;
+              }
+
+              > div {
+                display: flex;
+                gap: 0.75rem;
+                a {
+                  font-size: 1.5rem;
+                  color: $dark;
+                  transition: color 0.1s ease-in-out;
+
+                  &:hover {
+                    cursor: pointer;
+                    color: $light-dark;
+                  }
+                }
+              }
+            }
+
+            .archive-project__heading {
+              font-size: 1.35rem;
+              font-family: $font-text;
+              margin-bottom: 0.5rem;
+            }
+
+            .archive-project__description {
+              font-size: 1rem;
+              font-family: $font-text;
+              color: $light-dark;
+              line-height: 1.1rem;
+              text-align: justify;
+            }
+
+            .archive-project__technologies {
+              display: flex;
+              gap: 0.75rem;
+              margin-top: 1rem;
+              p {
+                font-family: $font-mono;
+                font-size: 0.8rem;
+                color: $light-dark;
+              }
+            }
+
+            transition: transform 0.1s ease-in-out;
+
+            &:hover {
+              cursor: pointer;
+              transform: translateY(-0.5rem);
+            }
+          }
+        }
+      }
     }
+  }
+  .page-container__contact {
+    width: 100%;
+    padding-top: 12rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
