--- a/src/views/homeView/homeView.styles.scss
+++ b/src/views/homeView/homeView.styles.scss
@@ -337,6 +337,14 @@
           background-color: $dark;
           z-index: 1;
         }
+        .switch__divider-line {
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          height: 2px;
+          background-color: $light-dark;
+        }
 
         .switch__button {
           position: relative;
@@ -353,15 +361,6 @@
             font-weight: 400;
             color: $light-dark;
             transition: color 0.1s ease-in-out;
-          }
-
-          div {
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            height: 2px;
-            background-color: $light-dark;
           }
 
           &:hover {
