Fixed bugs related to navigation

--- a/src/app.styles.scss
+++ b/src/app.styles.scss
@@ -1,5 +1,9 @@
 @import "./assets/styles/variables.styles.scss";
 
+html {
+  scroll-behavior: smooth;
+}
+
 ::selection {
   background: #dedede; /* WebKit/Blink Browsers */
 }
