--- a/src/components/contactMe/contactMe.styles.scss
+++ b/src/components/contactMe/contactMe.styles.scss
@@ -83,6 +83,7 @@
           border: 0.15rem solid $dark;
           overflow-x: hidden;
           resize: vertical;
+          visibility: hidden;
         }
 
         > textarea::placeholder {
