--- a/src/app.styles.scss
+++ b/src/app.styles.scss
@@ -32,17 +32,19 @@ html {
   align-items: center;
   gap: 1.25rem;
 
-  > svg {
-    transform: translate(0px, 0px);
-    font-size: 1.3rem;
-    color: $dark;
-    transition: color 0.1s ease-in-out;
-    transition: transform 0.1s ease-in-out;
+  > a {
+    > svg {
+      transform: translate(0px, 0px);
+      font-size: 1.3rem;
+      color: $dark;
+      transition: color 0.1s ease-in-out;
+      transition: transform 0.1s ease-in-out;
 
-    &:hover {
-      cursor: pointer;
-      color: $light-dark;
-      transform: translateY(-0.15rem);
+      &:hover {
+        cursor: pointer;
+        color: $light-dark;
+        transform: translateY(-0.15rem);
+      }
     }
   }
 }
