--- a/src/components/recentProjects/recentProjects.styles.scss
+++ b/src/components/recentProjects/recentProjects.styles.scss
@@ -28,6 +28,7 @@
       img {
         width: 100%;
         height: 100%;
+        max-height: 17.5rem;
         object-fit: cover;
         border-radius: 0.25rem;
         filter: grayscale(100%);
