--- a/src/components/recentProjects/recentProjects.styles.scss
+++ b/src/components/recentProjects/recentProjects.styles.scss
@@ -32,10 +32,11 @@
         object-fit: cover;
         border-radius: 0.25rem;
         filter: grayscale(100%);
-        transition: filter 0.1s ease-in-out;
+        transition: filter 0.1s ease-in-out, transform 0.1s ease-in-out;
 
         &:hover {
           filter: grayscale(0%);
+          transform: translateY(-0.25rem);
         }
       }
     }
