--- a/src/app.styles.scss
+++ b/src/app.styles.scss
@@ -13,6 +13,8 @@ html {
   min-height: 100vh;
   position: relative;
   transition: height 0.25s ease-in-out;
+  display: flex;
+  flex-direction: column;
 }
 
 .root-scrollOff {
@@ -87,4 +89,16 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  margin-top: auto;
+  p {
+    font-size: 0.8rem;
+    font-family: $font-mono;
+    color: $light-dark;
+    padding: 1rem;
+  }
 }
