--- a/src/assets/styles/mixins.styles.scss
+++ b/src/assets/styles/mixins.styles.scss
@@ -2,7 +2,15 @@
   font-family: $font-text;
   color: $light-dark;
   line-height: 1.75rem;
-  font-size: clamp(0.75rem, 3vw, 1.25rem);
+  font-size: 1.25rem;
   max-width: 37rem;
   font-weight: 300;
+
+  @media screen and (max-width: 1000px) {
+    font-size: 1.25rem;
+  }
+  @media screen and (max-width: 750px) {
+    font-size: 1rem;
+    line-height: 1.25rem;
+  }
 }
