--- a/src/components/introduction/introduction.styles.scss
+++ b/src/components/introduction/introduction.styles.scss
@@ -16,24 +16,55 @@
     align-items: flex-start;
     gap: 1.5rem;
 
+    @media screen and (max-width: 750px) {
+      gap: 1rem;
+    }
+
     .center-container__pre-intro {
       font-family: $font-mono;
       color: $light-dark;
-      font-size: clamp(0.5rem, 3vw, 1.25rem);
+      font-size: 1.25rem;
+
+      @media screen and (max-width: 1000px) {
+        font-size: 1rem;
+      }
+      @media screen and (max-width: 750px) {
+        font-size: 0.75rem;
+      }
     }
 
     .center-container__name {
       font-family: $font-text;
       color: $dark;
-      font-size: clamp(3rem, 8vw, 6rem);
+      font-size: 6rem;
       font-weight: 500;
+
+      @media screen and (max-width: 1000px) {
+        font-size: 4rem;
+      }
+      @media screen and (max-width: 750px) {
+        font-size: 3rem;
+      }
+      @media screen and (max-width: 450px) {
+        font-size: 2.5rem;
+      }
     }
 
     .center-container__job {
       font-family: $font-text;
       color: $light-dark;
-      font-size: clamp(2rem, 7vw, 5rem);
+      font-size: 5rem;
       font-weight: 500;
+      @media screen and (max-width: 1000px) {
+        font-size: 3rem;
+      }
+      @media screen and (max-width: 750px) {
+        font-size: 2rem;
+      }
+
+      @media screen and (max-width: 450px) {
+        font-size: 1.5rem;
+      }
     }
 
     .center-container__personal-description {
@@ -65,6 +96,14 @@
         cursor: pointer;
 
         box-shadow: 0rem 0rem 0rem 0rem #272727;
+      }
+
+      @media screen and (max-width: 750px) {
+        font-size: 0.85rem;
+        padding: 0.5rem 1rem;
+      }
+
+      @media screen and (max-width: 450px) {
       }
     }
   }
